--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=user-service
+
+server.port=8081
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=microservice
+
+spring.datasource.url=jdbc:h2:mem:users
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=
+jwt.expiration=
